Fix bug: footer jumped to middle of page on small screens as position was set to relative in media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -372,7 +372,7 @@ h2, h3 {
     }
 
     .footer {
-        position: relative;
+        /* position: relative; */
     }
 
     .about-us {
